--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1100px;
+    width: 750px;
 }
 
 .navbar li {
@@ -140,7 +140,7 @@ body {
     text-decoration: none;
 }
 .tag {
-    width: 400px;
+   /* width: 400px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -156,7 +156,7 @@ body {
 .luxury {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     width: 650px;
     font-size: 19px;
 }
@@ -188,6 +188,24 @@ body {
 
     
 }
+
+.category-title {
+    text-align: center; 
+    border-top: solid 1px; 
+    border-bottom: solid 1px;
+    margin: 10px auto;
+    width: fit-content;
+}
+
+.cart-total {
+    width: 68px;
+    text-align: center;
+    font-size: 28px;
+    margin-top: 17px
+}
+
+
+
 /* Add Media Query for responsiveness */
 @media (max-width: 768px) {
     .product-card {
